--- a/deutan/style.css
+++ b/deutan/style.css
@@ -197,6 +197,7 @@ span{
     background-color: #757BC8;
     height: 3px;
     width: 240px;
+    border-radius: 5px;
 }
 .mensagem{
     font-family: 'Montserrat';
@@ -332,7 +333,7 @@ span{
   .checkBox input[type=checkbox]:checked + div {
     left: -10px;
     top: -10px;
-    background-color: #000;
+    background-color: #CDCDCD;
   }
   
   .checkBox input[type=checkbox] {
@@ -353,4 +354,87 @@ span{
     font-weight: 600;
     letter-spacing: -0.025em;
     margin-left: 2px;
+  }
+
+  .btn-criar {
+    font-family: 'Montserrat';
+    font-size: 12px;
+    font-weight: 600;
+    height: 35px;
+    width: 105px;
+    border: 0px solid;
+    background-image: linear-gradient(45deg,#757BC8,#ADA7FF,#757BC8);
+    background-size: 500% 400%;
+    color: white;
+    border-radius: 10px;
+    transition: 0.6s all;
+    text-transform: initial;
+    box-sizing: border-box;
+    outline: 0;
+    cursor: pointer;
+    text-decoration: none;
+    padding-left: 38px;
+
+   }
+   
+   .btn-criar:hover {
+    background-position: 75% 50%;
+    transform: perspective(100px)
+   }
+   
+   .btn-criar:active {
+    transform: scale(0.95);
+    transition: 0.1s;
+   }
+
+.line-purple2{
+    background-color: #CDCDCD;
+    height: 2px;
+    width: 260px;
+    display: inline;
+    position: relative;
+    margin-top: 30px;
+    z-index: 1;
+    border-radius: 5px;
+}
+
+.separete{
+    display: inline;
+    font-family: 'Montserrat';
+    color: #CDCDCD;
+    margin-top: -12px;
+    font-size: 14px;
+    background-color: #F0F0F0;
+    width: 40px;
+    text-align: center;
+    z-index: 2;
+}
+  button {
+    max-width: 320px;
+    display: flex;
+    padding: 0.5rem 1.4rem;
+    font-family: 'Montserrat';
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 700;
+    text-align: center;
+    text-transform: initial;
+    vertical-align: middle;
+    align-items: center;
+    border-radius: 0.5rem;
+    border: 2px solid #757BC8;
+    gap: 0.75rem;
+    color: #000;
+    background-color: #fff;
+    cursor: pointer;
+    transition: all .6s ease;
+    margin-top: 20px;
+  }
+  
+  .button svg {
+    height: 22px;
+  }
+  
+  button:hover {
+    transform: scale(1.02);
   }
