--- a/deutan/style.css
+++ b/deutan/style.css
@@ -169,6 +169,9 @@ span{
     align-content: center;
   }
   .login{
+    background: none;
+    border: none;
+    margin-top: -12px;
     font-size: 1em;
     font-family: 'Montserrat';
     font-weight: 600;
@@ -201,6 +204,7 @@ span{
     animation: firstspan 4.5s forwards cubic-bezier(0.0, 0.0, 1.0, 1.0);
     animation: fadeIn 4.5s forwards, littleGrow 0.5s forwards;
     
+    transition: opacity 0.5s ease-out;
 }
 
 @keyframes littleGrow {
@@ -278,13 +282,15 @@ span{
     letter-spacing: -0.025em;
     margin-top: 260px;
 }
-.entrar{
+.entrar-link{
+    border: none;
+    background: none;
     font-family: 'Montserrat';
     color: #fff;
     font-size: 14px;
     font-weight: 700;
     letter-spacing: -0.025em;
-    margin-top: 2px;
+    margin-top: -4px;
 }
 
 .dados{
@@ -501,3 +507,88 @@ span{
   button:hover {
     transform: scale(1.02);
   }
+
+
+  .center-login{
+    position: absolute;
+    width: 980px;
+    height: 600px;
+    top: 18vh;
+    left: 20vw;
+    
+    background: linear-gradient(135deg, #FFFFFF 0%, #E8E8E8 100%);
+    box-shadow: -29px 29px 58px rgba(98, 98, 98, 0.2), 29px -29px 58px rgba(98, 98, 98, 0.2), -29px -29px 58px rgba(255, 255, 255, 0.9), 29px 29px 73px rgba(98, 98, 98, 0.9), inset 1px 1px 2px rgba(255, 255, 255, 0.3), inset -1px -1px 2px rgba(98, 98, 98, 0.5);
+    border-radius: 20px;
+    z-index: 1;
+
+    display: none;
+    flex-direction: row;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    animation: firstspan 4.5s forwards cubic-bezier(0.0, 0.0, 1.0, 1.0);
+    animation: fadeIn 4.5s forwards, littleGrow 0.5s forwards;
+    
+}
+
+@keyframes littleGrow {
+    0%{
+        font-size: 0.1rem;
+    }
+    100%{
+        font-size: 2.0rem;
+    }
+}
+
+.enter{
+    font-family: 'Montserrat';
+    color: #000;
+    font-size: 36px;
+    font-weight: 700;
+    letter-spacing: -0.025em;
+    margin-left: -7.5em;
+    margin-bottom: 0.4em;
+}
+
+.btn-entrar {
+    font-family: 'Montserrat';
+    font-size: 14px;
+    font-weight: 600;
+    height: 35px;
+    width: 105px;
+    border: 0px solid;
+    background-image: linear-gradient(45deg,#757BC8,#ADA7FF,#757BC8);
+    background-size: 500% 400%;
+    color: white;
+    border-radius: 10px;
+    transition: 0.6s all;
+    text-transform: initial;
+    box-sizing: border-box;
+    outline: 0;
+    cursor: pointer;
+    text-decoration: none;
+    padding-left: 30px;
+
+   }
+   
+   .btn-entrar:hover {
+    background-position: 75% 50%;
+    transform: perspective(100px)
+   }
+   
+   .btn-entrar:active {
+    transform: scale(0.95);
+    transition: 0.1s;
+   }
+
+   .criar-link{
+    border: none;
+    background: none;
+    font-family: 'Montserrat';
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: -0.025em;
+    margin-top: -4px;
+}
