--- a/deutan/style.css
+++ b/deutan/style.css
@@ -215,6 +215,14 @@ span{
         font-size: 2.0rem;
     }
 }
+@keyframes littleGrowOut {
+    0%{
+        font-size: 2.0rem;
+    }
+    100%{
+        font-size: 0.1rem;
+    }
+}
 
 .balls{
     position: relative;
